# algorithms-and-data-structures-cs

./: CMakeLists.txt  README.md
src/algorithms/binary-search/: README.md  binary-search.c  binary-search.h  main.c  tests.c
src/algorithms/bubble-sort/: README.md  bubble-sort.c  bubble-sort.h  main.c  tests.c
src/algorithms/linear-search/: README.md  linear-search.c  linear-search.h  main.c  tests.c
src/algorithms/merge-sort/: README.md  main.c  merge-sort.c  merge-sort.h  tests.c
src/algorithms/quick-sort/: README.md  main.c  quick-sort.c  quick-sort.h  tests.c
src/algorithms/selection-sort/: README.md  main.c  selection-sort.c  selection-sort.h  tests.c
src/data-structures/array/: README.md  array.c  array.h  tests.c
src/data-structures/avl-tree/: README.md  avl-tree.c  avl-tree.h  tests.c
src/data-structures/doubly-linked-list/: README.md  doubly-linked-list.c  doubly-linked-list.h  tests.c
src/data-structures/dynamic-queue/: README.md  dynamic-queue.c  dynamic-queue.h  main.c  tests.c
src/data-structures/linked-list/: README.md  linked-list.c  linked-list.h  main.c  tests.c
src/data-structures/list/: README.md  list.c  list.h  main.c  tests.c
src/data-structures/stack/: README.md  main.c  stack.c  stack.h  tests.c
